--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.micha.cars.ScrollingActivity">
+    tools:context="com.example.micha.cars.ClassRoomActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -57,7 +57,7 @@
                     android:text = "Assesments"
                     android:textSize = "20sp"
                     android:gravity = "center"/>
-                <include layout="@layout/content_scrolling"/>
+                <include layout="@layout/content_class_room"/>
             </LinearLayout>
             <Space
                 android:layout_width="match_parent"
@@ -76,7 +76,7 @@
                     android:text = "TAs"
                     android:textSize = "20sp"
                     android:gravity = "center"/>
-                <include layout="@layout/scrolling"/>
+                <include layout="@layout/class_room"/>
             </LinearLayout>
 
         </LinearLayout>
