--- a/app/src/main/res/layout/content_questions_board.xml
+++ b/app/src/main/res/layout/content_questions_board.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="5"
+    android:layout_height="300dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.micha.cars.ScrollingActivity"
-    tools:showIn="@layout/activity_scrolling">
+    tools:context="com.example.micha.cars.QuestionsBoard"
+    tools:showIn="@layout/activity_questions_board">
 
-    <Button
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "Quiz 1"
-        android:id="@+id/quizbutton" />
+        android:layout_margin="@dimen/text_margin"
+        android:text="@string/large_text" />
 
 </android.support.v4.widget.NestedScrollView>
-
