--- a/app/src/main/res/layout/class_room.xml
+++ b/app/src/main/res/layout/class_room.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight = "5"
     tools:context="com.example.micha.cars.ClassRoomActivity"
-    tools:showIn="@layout/activity_scrolling">
+    tools:showIn="@layout/activity_class_room">
 
-</android.support.v4.widget.NestedScrollView>
+</ListView>
