--- a/app/src/main/res/layout/content_class_room.xml
+++ b/app/src/main/res/layout/content_class_room.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="5"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.micha.cars.ClassRoomActivity"
-    tools:showIn="@layout/activity_scrolling">
+    tools:showIn="@layout/activity_class_room"
+    android:id = "@android:id/list">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text = "Quiz 1"
-        android:id="@+id/quizbutton" />
-
-</android.support.v4.widget.NestedScrollView>
+</ListView>
 
