--- a/app/src/main/res/layout/content_post_question.xml
+++ b/app/src/main/res/layout/content_post_question.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/questionfield"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -32,14 +32,15 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="11dp"
-        android:id="@+id/button6" />
+        android:id="@+id/postquestion" />
 
-    <TextView
-        android:text="Prototype Post Question"
+    <EditText
+        android:hint="Question Subject"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
-        android:id="@+id/textView6"
+        android:background = "@drawable/bordere"
+        android:id="@+id/questionsubject"
         android:textSize="26sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
