--- a/app/src/main/res/layout/content_quiz.xml
+++ b/app/src/main/res/layout/content_quiz.xml
@@ -12,7 +12,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.micha.cars.Quiz"
     tools:showIn="@layout/activity_quiz">
-
     <TextView
         android:text="Question 1"
         android:layout_width="wrap_content"
@@ -21,31 +20,11 @@
         android:textSize="30sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
-    <!-- <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hamburgers" />
-
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hot Dogs" />
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="String Cheese" />
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pizza" />
-    </RadioGroup> -->
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/textView2"
+    android:orientation="vertical">
 
     <TextView
         android:text="According to string theory, what is the universe made of?"
@@ -55,7 +34,15 @@
         android:textSize="18sp"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true" />
-
+    <fragment
+        class="com.example.micha.cars.QuizFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="59dp"
+        android:id = "@+id/quizfragment"/>
+    </LinearLayout>
     <Button
         android:text="Submit"
         android:layout_width="wrap_content"
@@ -65,16 +52,5 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_below="@+id/textView3"
-        android:gravity="start"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/bordere"
-        android:id="@+id/editText" />
 
 </RelativeLayout>
