--- a/app/src/main/res/layout/activity_class_page.xml
+++ b/app/src/main/res/layout/activity_class_page.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -47,7 +47,9 @@
         <Button
             android:layout_height="40dp"
             android:layout_width = "0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text = "Register Class"
+            android:id="@+id/registerclass"/>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
